Fix: spacing between icon and text ResearchItem

--- a/src/pages/Research/Research.scss
+++ b/src/pages/Research/Research.scss
@@ -10,7 +10,6 @@
 		video {
 			width: 100%;
 			border-radius: 12px;
-			border-radius: 12px;
 		}
 	}
 
